infra/k8s/programming-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: programming-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: programming
  template:
    metadata:
      labels:
        app: programming
    spec:
      containers:
        - name: programming
          image: areebaiftikhar/programming:v1
---
apiVersion: v1
kind: Service
metadata:
  name: programming-srv
spec:
  selector:
    app: programming
  ports:
    - name: programming
      protocol: TCP
      port: 3000
      targetPort: 3000
