infra/k8s/skill-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skill-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skill
  template:
    metadata:
      labels:
        app: skill
    spec:
      containers:
        - name: skill
          image: areebaiftikhar/skill:v1
---
apiVersion: v1
kind: Service
metadata:
  name: skill-srv
spec:
  selector:
    app: skill
  ports:
    - name: skill
      protocol: TCP
      port: 3000
      targetPort: 3000
