infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/skills/?(.*)
            pathType: Prefix
            backend:
              service:
                name: skill-srv
                port:
                  number: 3000
          - path: /api/programming/?(.*)
            pathType: Prefix
            backend:
              service:
                name: programming-srv
                port:
                  number: 3000
